$Id$

MIDIbox NG V1.002
~~~~~~~~~~~~~~~~~

   o the patterns specified with LED_MATRIX_PATTERN are now reversed so that the
     bit orientation matches with the hardware.


MIDIbox NG V1.001
~~~~~~~~~~~~~~~~~

   o maximum length of DIN/DOUT shift register chain increased to 32.
     This means that up to 256 digital inputs, and 256 digital outputs are available.

   o Number of virtual button and LED functions increased to 1024

   o New meta event for speeding up ENC movements (EncFast, see .NGC documentation)

   o New meta events for emulating SCS buttons/encoder (see .NGC documentation)

   o Ethernet and OSC setup now stored with ETH/OSC commands in .NGC file

   o SysEx variables are now stored with a SYSEX_VAR command in .NGC file

   o EVENT_BUTTON_MATRIX and EVENT_LED_MATRIX now properly supported
     See cfg/tests/blm8x8.ngc for a simple configuration example


MIDIbox NG V1.000
~~~~~~~~~~~~~~~~~

   o initial version